@@ -192,6 +192,7 @@ pinger.udp=UDP packet
 pinger.tcp=TCP port probe
 pinger.combined=Combined UDP+TCP
 pinger.java=Java Built-in
+pinger.arp=ARP (LAN only)
 opener.web=Web Browser
 opener.ftp=FTP
 opener.telnet=Telnet
