@@ -1,15 +1,18 @@
 package net.azib.ipscan.core.net;
 
+import net.azib.ipscan.config.ScannerConfig;
 import net.azib.ipscan.core.ScanningSubject;
 
 import java.io.IOException;
 import java.net.ConnectException;
 
+import static java.lang.System.currentTimeMillis;
+
 public class JavaPinger implements Pinger {
 	private int timeout;
 
-	public JavaPinger(int timeout) {
-		this.timeout = timeout;
+	public JavaPinger(ScannerConfig config) {
+		this.timeout = config.pingTimeout;
 	}
 
 	@Override
@@ -17,9 +20,9 @@ public class JavaPinger implements Pinger {
 		PingResult result = new PingResult(subject.getAddress(), count);
 		for (int i = 0; i < count; i++) {
 			try {
-				long t = System.currentTimeMillis();
+				long start = currentTimeMillis();
 				if (subject.getAddress().isReachable(timeout))
-					result.addReply(System.currentTimeMillis() - t);
+					result.addReply(currentTimeMillis() - start);
 			}
 			catch (ConnectException e) {
 				// these happen on Mac
