@@ -1,7 +1,7 @@
 package net.azib.ipscan.core.net;
 
 public class CombinedUnprivilegedPingerTest extends AbstractPingerTest {
-	public CombinedUnprivilegedPingerTest() {
-		super(new CombinedUnprivilegedPinger(10));
+	public CombinedUnprivilegedPingerTest() throws Exception {
+		super(CombinedUnprivilegedPinger.class);
 	}
 }
