@@ -1,7 +1,7 @@
 package net.azib.ipscan.core.net;
 
 public class JavaPingerTest extends AbstractPingerTest {
-	public JavaPingerTest() {
-		super(new JavaPinger(10));
+	public JavaPingerTest() throws Exception {
+		super(JavaPinger.class);
 	}
 }
