@@ -1,7 +1,7 @@
 package net.azib.ipscan.core.net;
 
 public class TCPPingerTest extends AbstractPingerTest {
-	public TCPPingerTest() {
-		super(new TCPPinger(10));
+	public TCPPingerTest() throws Exception {
+		super(TCPPinger.class);
 	}
 }
